# marketpulse

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  workspace.yaml
.github/workflows/: ci.yml
analytics/: __init__.py
dagster_home/: dagster.yaml
dashboard/: app.py
db/: connection.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _fct__models.yml  fct_tech_demand.sql
dbt/models/staging/: _stg_himalayas__models.yml  _stg_remoteok__models.yml  stg_himalayas_jobs.sql  stg_remoteok_jobs.sql
dbt/seeds/: known_technologies.csv
docs/: architecture.md
ingestion/: __init__.py  himalayas.py  loader.py  remoteok.py  sources.py
migrations/: env.py
migrations/versions/: 7923bbcdaa8b_create_schema_raw_and_remoteok_jobs.py  9428e0e497a6_create_schema_raw_and_himalayas_jobs.py
orchestration/: __init__.py  definitions.py  schedules.py
orchestration/assets/: __init__.py
orchestration/assets/analytics/: __init__.py
orchestration/assets/ingestion/: __init__.py  himalayas_asset.py  remoteok_asset.py
orchestration/assets/staging/: __init__.py
orchestration/resources/: __init__.py
tests/: conftest.py  test_himalayas.py  test_loader.py  test_remoteok.py  test_sources.py
