[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketpulse"
version = "0.1.0"
description = "Tech job-market intelligence pipeline: daily ingestion, dimensional modeling, and a live public dashboard."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sebastian Mora" }]
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.2",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

# Optional dependency groups. Install only what a given task needs, e.g.:
#   pip install -e ".[dev]"            -> local development (lint + tests)
#   pip install -e ".[orchestration]"  -> Dagster, added when we build the pipeline
[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
orchestration = [
    "dagster>=1.7",
    "dagster-webserver>=1.7",
]
transform = [
    "dbt-postgres>=1.8,<1.12",
]
dashboard = [
    "streamlit>=1.36",
    "plotly>=5.22",
]

[tool.setuptools.packages.find]
include = ["ingestion*", "analytics*", "orchestration*", "db*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: import sorting,
# B: likely bugs, UP: modern-Python upgrades.
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]